--- a/classes/class-2.html
+++ b/classes/class-2.html
@@ -14,7 +14,7 @@
 	</nav>
 	<h1 class="" class__title>Aula 2</h1>
 	<ul class="index">
-		<li><a href="#examples">Exemplos</a></li>
+		<!-- <li><a href="#examples">Exemplos</a></li> -->
 		<li><a href="#block-inline">Block and Inline</a></li>
 		<li><a href="#media">Media tags</a></li>
 		<li><a href="#forms">Formulários e Inputs</a></li>
@@ -23,10 +23,9 @@
 
 		</div>
 
-		<h3 id="examples">Exemplos</h3>
+		<!-- <h3 id="examples">Exemplos</h3> -->
 		<div class="examples__container">
-			<!-- <a href="../examples/clario-cards/clario.html">Cartão de Dashboard</a> -->
-		</div>
+ 		</div>
 		<!-- Seccção -->
 		<h3 id="block-inline">Elementos Block e Inline em HTML</h3>
 		<section>
