--- a/exercises/html-newspaper-article/index.html
+++ b/exercises/html-newspaper-article/index.html
@@ -11,27 +11,8 @@
 		<main>
 			<span>March 24, 2023</span>
 			<h1>Bringing Hygge to Your Backyard: Easy Ways to Make Your Outdoor Space Cozy and Calm subtitle: Tips & Trendz</h1>
-			<!-- <img
-			src="./assets/picture_1/picture_1-sm.jpeg"
-			alt=""
-			srcset="
-				./assets/picture_1/picture_1-sm.jpeg 1x,
-				./assets/picture_1/picture_1-md.jpeg 2x,
-				./assets/picture_1/picture_1-lg.jpeg 3x
-			"
-			sizes="(max-width: 768px) 300px, (max-width: 1024px) 800px, (max-width: 1200px) 100vw"
-		/> -->
 
-			<img
-				src="./assets/picture_1/picture_1-sm.jpeg"
-				alt=""
-				srcset="
-					./assets/picture_1/picture_1-sm.jpeg 200w,
-					./assets/picture_1/picture_1-md.jpeg 649w,
-					./assets/picture_1/picture_1-lg.jpeg 800w
-				"
-				sizes="(max-width: 768px) 300px, (max-width: 1024px) 800px, (max-width: 1200px) 100vw"
-			/>
+			<img src="./assets/picture_1/picture_1-sm.jpeg" alt="" />
 			<section>
 				<p>
 					The hygge lifestyle can be for anyone and everyone — you just have to prioritize comfort. Your house should feel like a home, not
