--- a/index.html
+++ b/index.html
@@ -82,6 +82,14 @@
 				<span class="class-count">Aula 9</span>
 				<span class="class-type">Hands on</span>
 			</a>
+			<a class="chapter" target="_blank" disabled href="classes/class-10.html">
+				<span class="class-count">Aula 10</span>
+				<span class="class-type">Hands on</span>
+			</a>
+			<a class="chapter" target="_blank" disabled href="classes/class-11.html">
+				<span class="class-count">Aula 11</span>
+				<span class="class-type">Hands on</span>
+			</a>
 		</div>
 
 		<h2 class="section_title">Presentations</h2>
